--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -48,179 +48,6 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">Aclaración de cargos</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
-                    <p class="card-text">
-                      Teléfono: </br> 5513289022</br>
-                      Whatsapp: </br> 5514559559</br>
-                      Correo:</br> aclaraciondecargos@utel.edu.mx
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Control Escolar</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Miriam Selene Campusano Maya</h6>
-                    <p class="card-text">
-                      Teléfono: </br> NA</br>
-                      Whatsapp: </br> NA</br>
-                      Correo:</br> miriam.capuzano@s4learning.com
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Reingresos</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
-                    <p class="card-text">
-                      Teléfono: </br> 5513289022</br>
-                      Whatsapp: </br> 5514559559</br>
-                      Correo:</br> aclaraciondecargos@utel.edu.mx
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Administración de colegiaturas</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Coordinación: Diana Manjarrez</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5536841414 - 5536841414</br>
-                      Whatsapp: </br>5573773982</br>
-                      Correo: </br>cobranza@utel.mx
-
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Cobranza</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Supervisora: Diana Alejandra Manjarrez López </h6>
-                    <p class="card-text">
-                      Teléfono: </br>5592522985</br>
-                      Whatsapp: </br>5592522985</br>
-                      Correo: </br>cobranza@utel.mx - dmanjalo@utel.edu.mx​ 
-
-                    </p>
-                  </div>
-                </div>
-
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Facturación</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5550897310 - 5550897302</br>
-                      Whatsapp: </br>5573773982</br>
-                      Correo: </br>facturacion@utel.edu.mx - acalixgo@utel.edu.mx
-
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Graduaciones</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
-                    <p class="card-text">
-                      Teléfono: </br> 5513289010</br>
-                      Whatsapp: </br> 5513289010</br>
-                      Correo:</br> graduacion@utel.edu.mx
-
-                    </p>
-
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Recepción</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">
-                      Responsable:</br>
-                      Adriana Vázquez Salcedo (matutino)</br>
-                      Ericka Vázquez (vespertino)</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5550897300</br>
-                      Correo: </br>cobranza@utel.mx
-
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Recolección</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Josué Moisés Pacheco</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5536841414 - 5536841414</br>
-                      Whatsapp: </br>5573773982</br>
-                      Correo: </br>c.estudiantil@utel.edu.mx
-
-                    </p>
-                  </div>
-                </div>
-
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Servicio social</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5513289025</br>
-                      Whatsapp: </br>5513289025</br>
-                      Correo: </br>serviciosocial@utel.edu.mx
-
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Servicio Social Utel</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Responsable: Carlos Ayala</h6>
-                    <p class="card-text">
-                      Teléfono: </br> 5550897377</br>
-                      Whatsapp: </br> - </br>
-                      Correo:</br> desarrollo.profesional@utel.edu.mx
-
-                    </p>
-
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Servicios Escolares</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Coordinador: José Luis Rodriguez</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5550897350 </br>
-                      Whatsapp: </br> - </br>
-                      Correo: </br>escolares@utel.edu.mx
-
-                    </p>
-                  </div>
-                </div>
-
-                <div class="col card border-0">
-                  <div class="card-body">
-                    <h5 class="card-title">Titulación</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Coordinadora: Laura Patricia Zúñiga Vargas</h6>
-                    <p class="card-text">
-                      Teléfono: </br>5513289010</br>
-                      Whatsapp: </br>NA</br>
-                      Correo: </br>titulacion@utel.edu.mx
-
-                    </p>
-                  </div>
-                </div>
-
-
-                <div class="col card border-0">
-                  <div class="card-body">
                     <h5 class="card-title">Éxito estudiantil</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
                     <p class="card-text">
@@ -231,6 +58,62 @@
                   </div>
                 </div>
 
+                <div class="col card border-0">
+                  <div class="card-body">
+                    <h5 class="card-title">Servicio social</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Francisco Javier Sandoval</h6>
+                    <p class="card-text">
+                      Teléfono: </br>5513289025</br>
+                      Correo: </br>serviciosocial@utel.edu.mx
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0">
+                  <div class="card-body">
+                    <h5 class="card-title">Titulación</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga Vargas</h6>
+                    <p class="card-text">
+                      Teléfono: </br>5513289010</br>
+                      Correo: </br>titulacion@utel.edu.mx
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0">
+                  <div class="card-body">
+                    <h5 class="card-title">Aclaración de cargos</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text">
+                      Teléfono: </br> 5513289022</br>
+                      Whatsapp: </br> 5514559559</br>
+                      Correo:</br> aclaraciondecargos@utel.edu.mx
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0">
+                  <div class="card-body">
+                    <h5 class="card-title">Cobranza Utel</h5>
+                    <h6 class="card-subtitle mb-2 text-muted"></h6>
+                    <p class="card-text">
+                      Teléfono: </br> 5592522985</br>
+                      Whatsapp: </br> 5592522985</br>
+                      Correo:</br> admoncolegiaturas@utel.mx
+                    </p>
+                  </div>
+                </div>
+
+                <div class="col card border-0">
+                  <div class="card-body">
+                    <h5 class="card-title">Facturación</h5>
+                    <h6 class="card-subtitle mb-2 text-muted">Oscar González Vega</h6>
+                    <p class="card-text">
+                      Correo:</br> facturacionautomatica@utel.edu.mx
+                    </p>
+                  </div>
+                </div>
+                
               </div>
                 
               </div>
