--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/loader.css" />
     <link rel="stylesheet" href="/css/main.css" />
-    <link rel="shortcut icon" href="img/logo.ico">
+    <link rel="shortcut icon" href="/img/logo.ico">
 </head>
 <body {{#unless user}} style="background-image: url(/img/fondo.png);"{{/unless}}>  
         {{>navigation}}
@@ -16,7 +16,6 @@
         <main class="container py-5">
             {{>loader}}
             {{>messages}}
-            {{>errors}}
             {{{body}}}
         </main>
         {{>footer}}
