--- a/src/views/users/signin.hbs
+++ b/src/views/users/signin.hbs
@@ -1,9 +1,9 @@
 <div class="my-3 py-3">
-<link rel="shortcut icon" href="img/logo.ico">
+
   
   
   <div class="card card-login position-absolute top-50 start-50 translate-middle border-0" style="width: 350px;">
-
+    
     <div class="letra text-center pt-4">
       <img style="height: 40px" src="/img/logo.png">
     </div>
@@ -17,6 +17,8 @@
         <label for="passswore">Password:</label>
         <input type="password" class="form-control " name="password" placeholder="Password" />
       </div>
+
+      {{>errors}}
 
       <div class=" row text-center m-5">
         <button class="Botonmanual py-3 px-3 text-center m-0">
