--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -49,7 +49,7 @@
                 <div class="col card border-0">
                   <div class="card-body">
                     <h5 class="card-title">Éxito estudiantil</h5>
-                    <h6 class="card-subtitle mb-2 text-muted">Óscar Gonzalez Vega</h6>
+                    <h6 class="card-subtitle mb-2 text-muted">Hilda Sara Mely Jardón Olguín</h6>
                     <p class="card-text">
                       Teléfono: 5589770707</br>
                       Whatsapp: 5589770707</br>
