--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -362,7 +362,7 @@
           </div>
 
           <div>
-            <img class="img-proceso" src="img/procesotl.png">
+            <img class="img-proceso" src="img/procesotitl.png">
 
             <!--
               <div class="card border-0 card-proceso col-lg-9 ">
