--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -71,7 +71,7 @@
 
                 <div class="col card border-0">
                   <div class="card-body">
-                    <h5 class="card-title">Titulación</h5>
+                    <h5 class="card-title">Comunicación SER</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Laura Patricia Zúñiga Vargas</h6>
                     <p class="card-text">
                       Teléfono: </br>5513289010</br>
