--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -32,8 +32,8 @@
           <div class="card border-0">
             <img src="img/Noticias/noticiasstrabajo.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Servicio social.</h5>
-              <p class="card-text">Se abrirá una nueva campaña con éxito estudiantil para una nueva modalidad de liberación de Servicio social por experiencia laboral. Consiste en tomar en cuenta los últimos 6 meses de trabajo (en una empresa pública o privada) para poder liberar el servicio social. </p>
+              <h5 class="card-title">Modalidades servicio social.</h5>
+              <p class="card-text">Se agregan un conjunto de nuevas modalidades de servicio social, esto con el fin de que los alumnos tengan una mayor facilidad para realizar el trámite, las podrán encontrar en el apartado de servicio social.</p>
             </div>
           </div>
         </div>
@@ -52,8 +52,8 @@
           <div class="card border-0">
             <img src="img/Noticias/constanciaaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title">Constancia de inscripción.</h5>
-              <p class="card-text">Se apertura un nuevo accesorio que se llama Constancia de inscripción. Este documento es solo para los de nuevo ingreso y futuros. Solo se refleja la matriculación, fecha de inicio de clases, número de materias y RVOE. El costo es de $500 </p>
+              <h5 class="card-title">Equivalencia Ecuador.</h5>
+              <p class="card-text">Para la equivalencia de Ecuador no es necesario que los egresados compren  el CPA, sin embargo si lo solicitan se trabajara. Quienes realizaron el pago del CPA y solicitan la carta CINE UNESCO, no deben realizar el pago del documento, esto aplica para las matrículas a las que aun se les solicitó el pago del CPA, con anterioridad.</p>
             </div>
           </div>
         </div>
@@ -62,13 +62,9 @@
           <div class="card border-0">
             <img src="img/Noticias/equipoaviso.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <h5 class="card-title">Nuevas supervisiones</h5>
               <p class="card-text">
-                Se anuncia la creación del nuevo equipo de Correspondencia escolar. Este equipo se encargará de la recepción y envío de los documentos en Utel. Los integrantes del equipo son: <br/>
-                -Carlos Eduardo Barrera Sanabria (turno matutino  y responsable del área)<br/>
-                -Carlos Fernando Jiménez Huicochea (turno matutino) <br/>
-                -Erick Abdul Cureño Castillo (Turno Vespertino) <br/>
-                -Arturo Pacheco Vaquero (Turno Vespertino) 
+                La supervisión de certificación queda a cargo de Jose Roberto Reyes Simbron , la supervisión de titulación pasa a Jessica Guzman Perez
               </p>
             </div>
           </div>
