--- a/src/views/index.hbs
+++ b/src/views/index.hbs
@@ -88,9 +88,9 @@
           <div class="card border-0">
             <img src="img/Noticias/demora.png" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title"> Correspondencia escolar.</h5>
+              <h5 class="card-title">Evento de entrega de documentos.</h5>
               <p class="card-text">
-                Indican que están realizando varios procesos y la carga de trabajo se les ha incrementado. 
+                Es importante mencionar a los alumnos que para el evento del día 23 de septiembre solo acudan con un acompañante, esto con la finalidad de tener una mejor organización.
               </p>
             </div>
           </div>
