--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -33,7 +33,7 @@
           <a  href="titulacion#bloqueCertificacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncerti">Certificación</a>
           <a  href="titulacion#boqueTitulacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitu">Titulación</a>
           <a  href="titulacion#bloqueTitulacionLatam" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitulatam">Titulación LATAM</a>
-          <a  href="titulacion#bloqueTituloInt" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitinter">Titulo intermedio</a>
+          <a  href="titulacion#bloqueTituloInt" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitinter">Representación Grafica</a>
           <a  href="titulacion#boqueCertificadoPar" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncertpar">Certificado parcial</a>
         </div>
 
@@ -43,7 +43,8 @@
           <h5 class="card-title text-center">Convalidación</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Doble reconocimiento</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >CINE UNESCO</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Equivalencia academica USA</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >CPA</a>
         </div>
 
@@ -52,11 +53,16 @@
           <img src="img/Serso_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Servicio social</h5>
           <a href="serviciosocial#SSregular" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(6)">Servicio social regular</a>
+          <a href="serviciosocial#SScoach" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(10)">Servicio social en Utel como coach universitario</a>
           <a href="serviciosocial#SSart91" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(7)">Servicio social por articulo 91</a>
           <a href="serviciosocial#SSart52" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(8)">Servicio social por articulo 52</a>
-          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio social con causa</a>
-          <a href="serviciosocial#SScoach" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(10)">Servicio social en Utel como coach universitario</a>
           <a href="serviciosocial#SStrabajo" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(11)">Trabajo colaborativo</a>
+          <a href="serviciosocial#SStrabajo" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(11)">Servicio social para las juventudes</a>
+          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Coach Titulación y Profesionalización</a>
+          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio Social Para la Comunidad</a>
+          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio social con causa</a>
+          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio Social en Empresas y Emprendimientos</a>
+          <a href="serviciosocial#SSconcausa" class="Botonsubmenu row py-3 px-3 my-0 bton" onclick="selecNum(9)">Servicio Social Programa de Tutorías</a>
         </div>
         
         <!--Servicios escolares-->
@@ -66,7 +72,7 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tipos de ingreso</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tramites que realiza escolares</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Costos en plataforma</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Diplomados</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Diploma intermedio</a>
         </div>
 
         <!--Recoleción de documentos-->
@@ -74,8 +80,10 @@
           <img src="img/Documentos_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Recoleción de documentos</h5>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación Utel</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos nacionales?</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >¿Como validar documentos LATAM?</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentos nacionales</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentos LATAM</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentos Alianzas</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Documentación tipos de ingreso</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Legalización</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Archivo</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
@@ -86,9 +94,11 @@
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="directorio">
           <img src="img/Directorio_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Directorio</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Busqueda</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Departamentos</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Glosario</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Responsables por Departamentos</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Otras bases de información</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Ubicación</a>
         </div>
 
         <!--Manuales-->
