--- a/src/views/preguntas.hbs
+++ b/src/views/preguntas.hbs
@@ -20,7 +20,7 @@
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesServicioSocial">Servicio social</li></div>
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesControlDocumental">Control documental</li></div>
                 <div class="col"><li class="li" id="menuPreguntasFrecuentesEscolares">Escolares</li></div>
-                <div class="col"><li class="li" id="menuPreguntasFrecuentesTutoria">Tutoria</li></div>
+                <div class="col"><li class="li" id="menuPreguntasFrecuentesTutoria">Éxito estudiantil</li></div>
                 </div>
             </ul>
 
