--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -234,6 +234,7 @@
         </div>
 
       </div>
+
       <!--Convalidación-->
       <div class="bloque">
         <div class="card border-0">
@@ -586,6 +587,11 @@
                 
 
           </a>
+          </br> </br> 
+
+          <h4><b>Ejemplo de documento</b></h4></br>
+
+          <iframe src="docs/doc/equsa.pdf" width="100%" height="680px"></iframe>
           
 
           <div class="my-5 ">
