--- a/src/views/directorio.hbs
+++ b/src/views/directorio.hbs
@@ -2612,7 +2612,9 @@
 
   <h3 class="text-center">Responsables por Departamentos</h3>
 
-  <img class="d-block w-100" src="img/directorio/responsables.png" alt="">
+<div class="embed-responsive embed-responsive-16by9">
+  <iframe height="900px" width="100%" class="embed-responsive-item" src="https://docs.google.com/document/d/e/2PACX-1vS4s6vky9_GN-vS__80Nd-jOR9grK1KXGrC0WBSHWPApibqmu8U54knk7m87xhmKw/pub?embedded=true"></iframe>
+</div>
 
 </div>
 
