--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -121,7 +121,7 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Servicio social</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Control documental</a>
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Escolares</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Tutoria</a>
+          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Éxito estudiantil</a>
         </div>
       </div>
 
