--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -539,9 +539,18 @@
             El costo es de: $15.00 USD<br/><br/>
             El tiempo estimado de entrega es de  días hábiles.
           </a>
-              <img src="img/titulacion/latam/unesco.PNG" style="max-width: 856px;" alt="">
 
-              <img src="img/titulacion/latam/unesco2.PNG" style="max-width: 856px;" alt="">
+              <div class="row row row-cols-1 row-cols-xl-2 row-cols-md-2 g-4 my-1">
+
+                <div class="col card border-0">
+                  <img src="img/titulacion/latam/unesco.PNG" style="max-width: 856px;" alt="">
+                </div>
+
+                <div class="col card border-0">
+                  <img src="img/titulacion/latam/unesco2.PNG" style="max-width: 856px;" alt="">
+                </div>
+
+              </div>
          
         </div>
       </div>
