--- a/src/views/recoleccion.hbs
+++ b/src/views/recoleccion.hbs
@@ -643,7 +643,7 @@
                   </div>
                 </div>
 
-                <!--Documentos Alianzas-->
+                <!--Documentos Alianzas
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="panelsStayOpen-headingDiplo">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
@@ -676,7 +676,7 @@
                   </div>
 
                 </div>
-
+                -->
               </div>
             </div>
           </div>
