--- a/src/views/serviciosocial.hbs
+++ b/src/views/serviciosocial.hbs
@@ -282,7 +282,7 @@
 
                     7.-Firma. <br />
 
-                    <a href="" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/regular/cassregular.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -362,7 +362,7 @@
 
                     </p>
 
-                    <a href="" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/regular/rgssregular.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -436,7 +436,7 @@
 
                     </p>
 
-                    <a href="" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/regular/ctssregular.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -908,29 +908,23 @@
 
                   <div class="col card border border-0">
 
-                    <strong class="py-3 px-3"> Características del reporte global</strong>
+                    <strong class="py-3 px-3"> Características de la carta de presentación</strong>
+
                     <p>
+                      -La carta de presentación es un documento donde la escuela se presenta formalmente ante alguna
+                      institución para que los alumnos puedan realizar su servicio social dentro de la
+                      misma.<br /><br />
 
-                      El reporte global de actividades es un formato que tiene que complementar el  y la
-                      institución; El documento tiene que estar firmado, membretado o/y sellado por la institución.
-                      <br /> <br />
-                      La fecha de inicio tiene que coincidir con la carta de aceptación y la checa de termino con la
-                      constancia de termino.
-                      <br /><br />
+                      -Datos completos del alumno <br /><br />
 
-                      1.-Datos del alumno. <br />
+                      -Departamento y encargado del área de interés. <br /><br />
 
-                      2.-Datos de la institución; fecha de inicio y de término <br />
+                      -Firma de responsable de servicio social. <br /><br />
 
-                      3.-Actividades. <br />
-
-                      4.-Desarrollo profesional del . <br />
-
-                      5.-Firma. <br />
+                      -Sello de Utel <br /><br />
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -984,8 +978,15 @@
                   <div class="col card border border-0">
 
                     <strong class="py-3 px-3"> Características de la Excepción de servicio social</strong>
+                      -La carta de excepción es un documento donde el alumno presenta su solicitud para la liberación del servicio social donde se especifica que el alumno es trabajador gubernamental y queda excento de realizar el servicio social.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                      -Datos completos del alumno <br /><br />
+
+                      -Dependencia guberntal. <br /><br />
+
+                      -Firma de responsable del departamento donde labora. <br /><br />
+
+                    <a href="docs/docss/art91/formatossart91.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1011,9 +1012,10 @@
         <div class="accordion-body" id="SSart52">
           <strong>Servicio social por articulo 52</strong></br></br>
           Todos los alumnos de las profesiones a que se refiere esta Ley, así como los profesionistas no mayores de
-          60 años,
-          o impedidos por enfermedad grave, ejerzan o no, deberán prestar el servicio social en los términos de esta
-          Ley.
+          60 años, o impedidos por enfermedad grave, ejerzan o no, deberán prestar el servicio social en los términos de esta Ley.</br></br>
+
+          -Mayores de 60 comprobar con INE, CURP o Acta de Nacimiento</br>
+          -Para enfermedad deberá compartir por correo a serviciosocial@utel.edu.mx archivo médico que compruebe el impedimento crónico que impida realizar el servicio social
         </div>
 
       </div>
@@ -1174,7 +1176,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/colab/formatocolab.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1250,7 +1252,7 @@
                       5.-Firma. <br />
 
                     </p>
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/colab/formatocolab.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -1326,7 +1328,7 @@
                       5.-Firma. <br />
 
                     </p>
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/colab/formatocolab.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -3025,17 +3027,17 @@
 
         </div>
 
-        <!--Formatos trabajo colaborativo-->
+        <!--Formatos Programa de Tutorías-->
         <div class="container my-3 mx-3">
 
           Formatos </br>
           <div class="row row-cols-xl-1 row-cols-xl-4 row-cols-md-4">
 
-            <!--Solicitud Servicio Social Trabajo Colaborativo-->
+            <!--Solicitud Servicio Social Programa de Tutorías-->
             <button class="col btn botonejemdoc" type="button" data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasBottomSolicitudTTutorias" aria-controls="offcanvasBottom"><img
                 style="height: 200px" src="img/serviciosocial/tuto/carta-aceptacion.png"
-                title="Solicitud Servicio Social Trabajo Colaborativo"> </button>
+                title="Solicitud Servicio Social Programa de Tutorías"> </button>
 
             <div class="offcanvas offcanvas-bottom" tabindex="-1" id="offcanvasBottomSolicitudTTutorias"
               aria-labelledby="offcanvasBottomLabel">
@@ -3096,7 +3098,7 @@
 
                     7.-Firma.
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/tuto/casstuto.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
 
                   </div>
                 </div>
@@ -3172,7 +3174,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/tuto/rgsstuto.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
@@ -3245,7 +3247,7 @@
 
                     </p>
 
-                    <a href="docs/docss/" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
+                    <a href="docs/docss/tuto/ctsstuto.docx" download="" class="Botonmanual row py-2 px-2 text-center justify-content-center">Descargar formato</a>
                   </div>
                 </div>
               </div>
