--- a/src/views/latam.hbs
+++ b/src/views/latam.hbs
@@ -15,7 +15,7 @@
     <div class="subcontenedor">
       
       <!--Apostilla-->
-      <div class="bloque activo" >
+      <div class="bloque activo" id="bloqueApostilla">
         <div class="card border-0 py-3 px-3" >
 
           <h4><b>¿Qué es el apostillado?</b></h4></br>
@@ -236,7 +236,7 @@
       </div>
 
       <!--Convalidación-->
-      <div class="bloque">
+      <div class="bloque" id="bloqueConvalidacion">
         <div class="card border-0">
           <h4><b>¿Qué es el Proceso de Convalidación LATAM?</b></h4></br>
           
@@ -528,7 +528,7 @@
       </div>
 
       <!--CINE UNESCO-->
-      <div class="bloque">
+      <div class="bloque" id="bloqueUnesco">
          <div class="card border-0">
           <h4><b>CINE UNESCO</b></h4></br>
           
@@ -556,7 +556,7 @@
       </div>
 
       <!--Equivalencia Académica USA-->
-      <div class="bloque">
+      <div class="bloque" id="bloqueEqusa">
         <div class="card border-0 py-3 px-3" >
             <h4><b>Equivalencia academica USA</b></h4></br>
             
@@ -636,7 +636,7 @@
       </div> 
       
       <!--CPA--> 
-      <div class="bloque">
+      <div class="bloque" id="bloqueCpa">
         <div class="card border-0 py-3 px-3" >
             <h4><b>Certificado de programa académica para Proceso de Convalidación LATAM</b></h4></br>
             
