--- a/src/views/mapa.hbs
+++ b/src/views/mapa.hbs
@@ -7,10 +7,10 @@
       <div class="col-3">
         <div class="col">
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(1)">Titulación</a>
+          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Convalidación</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(2)">Servicio social</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(3)">Servicios escolares</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(4)">Recolección de documentos</a>
-          <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(5)">Convalidación</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(6)">Directorio</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(7)">Manuales</a>
           <a class="Botonmenu row py-3 px-3 my-0 bton justify-content-center" onmouseover="mostrarDocumento(8)">Dudas</a>
@@ -33,7 +33,7 @@
           <a  href="titulacion#bloqueCertificacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncerti">Certificación</a>
           <a  href="titulacion#boqueTitulacion" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitu">Titulación</a>
           <a  href="titulacion#bloqueTitulacionLatam" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitulatam">Titulación LATAM</a>
-          <a  href="titulacion#bloqueTituloInt" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botontitinter">Representación Grafica</a>
+          <a  href="titulacion#bloqueRepGraf" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonrepgraf">Representación Grafica</a>
           <a  href="titulacion#boqueCertificadoPar" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botoncertpar">Certificado parcial</a>
         </div>
 
@@ -41,11 +41,11 @@
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="apostilla">
           <img src="img/Apostilla_img.png" class="imagenes_mapa" alt="...">
           <h5 class="card-title text-center">Convalidación</h5>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Apostilla</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Convalidación</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >CINE UNESCO</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Equivalencia academica USA</a>
-          <a class="Botonsubmenu row py-3 px-3 my-0 bton" >CPA</a>
+          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonApostilla">Apostilla</a>
+          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonConvalidacion">Convalidación</a>
+          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonUnesco">CINE UNESCO</a>
+          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonEqusa">Equivalencia academica USA</a>
+          <a href="" class="Botonsubmenu row py-3 px-3 my-0 bton" id="botonCpa">CPA</a>
         </div>
 
         <!--Servicio social-->
@@ -89,7 +89,6 @@
           <a class="Botonsubmenu row py-3 px-3 my-0 bton" >Procesos</a>
         </div>
         
-
         <!--Directorio-->
         <div class="card border-0 mb-3 py-2 doc" style="display: none;" id="directorio">
           <img src="img/Directorio_img.png" class="imagenes_mapa" alt="...">
