--- a/src/views/titulacion.hbs
+++ b/src/views/titulacion.hbs
@@ -14,7 +14,7 @@
           <div class="col"><li class="li activo" id="menuCertificacion">Certificación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacion">Titulación</li></div>
           <div class="col"><li class="li noactivo" id="menuTitulacionLatam">Titulación LATAM</li></div>
-          <div class="col"><li class="li noactivo" id="menuTituloInt">Representación Grafica</li></div>
+          <div class="col"><li class="li noactivo" id="menuRepGraf">Representación Grafica</li></div>
           <div class="col"><li class="li noactivo" id="menuCertificadoPar">Certificado parcial</li></div>
           </div>
       </ul>
@@ -406,7 +406,7 @@
         </div>
 
         <!--Representación grafica-->
-        <div class="bloque noactivo m-0" id="bloqueTituloInt">
+        <div class="bloque noactivo m-0" id="bloqueRepGraf">
           
           <div class="card mb-3 card mb-3 border-0" style="max-width: 100%;">
            
